# clionchess

./: CMakeLists.txt  README.md  main.cpp
boards/: BoardClassical.cpp  BoardClassical.h
constants/: ClassicChessConstants.cpp  ClassicChessConstants.h
factories/: BoardFactory.cpp  BoardFactory.h
main/: ChessTemplate.cpp  ChessTemplate.h  ClassicChessTemplate.cpp  ClassicChessTemplate.h
moves/: FixedMovesPerPieceClassicChess.cpp  FixedMovesPerPieceClassicChess.h
utilities/: contstants.cpp  contstants.h
